Fix spacing of full-text index state row

--- a/chrome/skin/default/zotero/bindings/attachmentbox.css
+++ b/chrome/skin/default/zotero/bindings/attachmentbox.css
@@ -65,6 +65,11 @@ row > hbox
 	-moz-box-align: center;
 }
 
+/* Reindex icon makes the row larger */
+#indexStatusRow > hbox {
+	margin: 0 !important;
+}
+
 row > label:first-child
 {
 	text-align: right;
